houzez/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Zeyada";
  src: url("./fonts/Zeyada-Regular.ttf") format("truetype");
}
.swiper-button-next:after,
.swiper-button-prev:after {
  color: #a8dadc;
}

.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
  background: #a8dadc !important;
}
body {
  background-color: rgb(240, 253, 244);
  /* background-color: #659dbd; */
}

.image-container {
  position: relative;
  width: 350px;
  height: 250px;
  overflow: hidden;
}

.image-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 0.3s ease;
}

.image-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.image-container:hover .image {
  transform: scale(1.1);
}

.image-container:hover .image-overlay {
  opacity: 1;
}
.btn {
  display: inline-block;
  padding: 10px 20px;
  background-color: blue;
  color: white;
  text-decoration: none;
  border-radius: 30px;
}

.btn-rent {
  margin-top: 10px;
}

.btn-buy {
  margin-top: 10px;
}

.btn-sell {
  margin-top: 10px;
}

@media (max-width: 767px) {
  .image-content {
    text-align: center;
  }
}

